# assistant-bot

./: CMakeLists.txt
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
.github/worlflows/: deploy.yml
src/: assistant.hpp  chatdb.hpp  main.cpp  system-classifier.hpp  system-executor.hpp  system-recall.hpp  system-responder.hpp  system-summary.hpp  whisper_cli.hpp
tests/: section-parsing.cpp
